--- a/1blankspace/Base.lproj/Main.storyboard
+++ b/1blankspace/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="Khp-Dz-1ar">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
         <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
@@ -671,11 +670,10 @@
         <!--Window Controller-->
         <scene sceneID="GNj-0w-rBV">
             <objects>
-                <windowController id="Khp-Dz-1ar" sceneMemberID="viewController">
+                <windowController showSeguePresentationStyle="single" id="Khp-Dz-1ar" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Ca9-eg-IT2">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="163" y="199" width="330" height="257"/>
+                        <rect key="contentRect" x="163" y="189" width="330" height="257"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
                         <value key="minSize" type="size" width="330" height="257"/>
                         <value key="maxSize" type="size" width="330" height="257"/>
@@ -706,7 +704,7 @@
                 </windowController>
                 <customObject id="wjv-1c-N54" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1053" y="526"/>
+            <point key="canvasLocation" x="102.5" y="1409"/>
         </scene>
         <!--Panel View Controller-->
         <scene sceneID="776-9Q-C3J">
@@ -836,7 +834,7 @@ Gw
                 </viewController>
                 <customObject id="51L-OF-l5p" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-601.5" y="526"/>
+            <point key="canvasLocation" x="594.5" y="1409"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="Va9-oP-79o">
@@ -945,6 +943,9 @@ Gw
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="rememberAction:" target="Y6S-2i-8Mf" id="6TD-HB-siM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
@@ -974,7 +975,9 @@ Gw
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="0kD-Cq-jJs" id="db9-zw-1T8"/>
                         <outlet property="errorTextField" destination="1Q3-gd-oMZ" id="dUj-OV-730"/>
+                        <outlet property="loginButton" destination="s5r-p4-LBQ" id="OAW-2l-g0o"/>
                         <outlet property="loginTextField" destination="PJN-wL-GjL" id="mfG-bb-p2O"/>
                         <outlet property="passwordTextField" destination="skG-w8-ygx" id="gaT-nv-PWR"/>
                         <outlet property="progressIndicator" destination="SXi-BI-TCO" id="dhM-Fj-bRG"/>
@@ -1015,7 +1018,7 @@ Gw
                                                     <imageCell key="dataCell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="gGa-fo-uho"/>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="title" editable="NO" width="143.99015666584776" minWidth="40" maxWidth="1000" id="0Oz-lz-U1R">
+                                                <tableColumn identifier="title" editable="NO" width="144" minWidth="40" maxWidth="1000" id="0Oz-lz-U1R">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -1037,28 +1040,28 @@ Gw
                                     <nil key="backgroundColor"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fFo-UA-U12">
-                                    <rect key="frame" x="1" y="504" width="190" height="15"/>
+                                    <rect key="frame" x="1" y="-15" width="0.0" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="tXR-9e-RvO">
-                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <rect key="frame" x="-15" y="1" width="16" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
                             <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRT-Z1-aKf">
                                 <rect key="frame" x="382" y="99" width="600" height="455"/>
                                 <clipView key="contentView" ambiguous="YES" id="9TP-QE-Is6">
-                                    <rect key="frame" x="1" y="23" width="598" height="431"/>
+                                    <rect key="frame" x="1" y="0.0" width="598" height="454"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="4bK-YW-thL" id="2hu-05-y4f">
-                                            <rect key="frame" x="0.0" y="0.0" width="598" height="19"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="598" height="431"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn identifier="col1" editable="NO" width="150" minWidth="40" maxWidth="1000" id="azM-Rj-Hnf">
+                                                <tableColumn identifier="col1" editable="NO" width="161.5" minWidth="40" maxWidth="1000" id="azM-Rj-Hnf">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="First Name">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -1071,7 +1074,7 @@ Gw
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="col2" editable="NO" width="150" minWidth="40" maxWidth="1000" id="WdJ-hu-Ndi">
+                                                <tableColumn identifier="col2" editable="NO" width="161.5" minWidth="40" maxWidth="1000" id="WdJ-hu-Ndi">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Last Name">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -1084,7 +1087,7 @@ Gw
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="col3" editable="NO" width="150" minWidth="10" maxWidth="3.4028234663852886e+38" id="wbg-UP-szz">
+                                                <tableColumn identifier="col3" editable="NO" width="131.5" minWidth="10" maxWidth="3.4028234663852886e+38" id="wbg-UP-szz">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Email">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -1097,7 +1100,7 @@ Gw
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="col4" editable="NO" width="136" minWidth="10" maxWidth="3.4028234663852886e+38" id="eqe-SQ-rqa">
+                                                <tableColumn identifier="col4" editable="NO" width="131.5" minWidth="10" maxWidth="3.4028234663852886e+38" id="eqe-SQ-rqa">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Phone">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -1116,11 +1119,11 @@ Gw
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Rbh-9V-guB">
-                                    <rect key="frame" x="1" y="438" width="598" height="16"/>
+                                    <rect key="frame" x="1" y="7" width="0.0" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="VbB-xd-WR5">
-                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <rect key="frame" x="-15" y="23" width="16" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="4bK-YW-thL">
@@ -1131,7 +1134,7 @@ Gw
                             <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebK-PR-GkL">
                                 <rect key="frame" x="190" y="99" width="194" height="455"/>
                                 <clipView key="contentView" ambiguous="YES" drawsBackground="NO" id="hvp-RU-Ayv">
-                                    <rect key="frame" x="1" y="23" width="192" height="431"/>
+                                    <rect key="frame" x="1" y="0.0" width="192" height="454"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="0Gl-1z-dZI" id="XH1-oi-c3l">
@@ -1162,11 +1165,11 @@ Gw
                                     <nil key="backgroundColor"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="XCt-sO-aL5">
-                                    <rect key="frame" x="1" y="438" width="192" height="16"/>
+                                    <rect key="frame" x="1" y="7" width="0.0" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="yf4-y5-i0b">
-                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <rect key="frame" x="-15" y="23" width="16" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="0Gl-1z-dZI">
