--- a/1blankspace/Base.lproj/Main.storyboard
+++ b/1blankspace/Base.lproj/Main.storyboard
@@ -213,23 +213,21 @@
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="_blankspace" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-767" y="-215"/>
+            <point key="canvasLocation" x="-937" y="-182"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController storyboardIdentifier="MainWindow" showSeguePresentationStyle="single" id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="MainWindow" showSeguePresentationStyle="single" id="B8D-0N-5wS" customClass="MainWindowController" customModule="_blankspace" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Contacts" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" unifiedTitleAndToolbar="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="981" height="553"/>
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" unifiedTitleAndToolbar="YES" fullSizeContentView="YES"/>
+                        <rect key="contentRect" x="196" y="240" width="1000" height="750"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                         <value key="minSize" type="size" width="981" height="553"/>
-                        <value key="maxSize" type="size" width="981" height="553"/>
-                        <toolbar key="toolbar" implicitIdentifier="BA8CA379-AE0D-4FA6-B982-C834688D20D9" displayMode="iconAndLabel" sizeMode="regular" id="68z-yG-NK9">
+                        <toolbar key="toolbar" implicitIdentifier="BA8CA379-AE0D-4FA6-B982-C834688D20D9" allowsUserCustomization="NO" displayMode="iconOnly" sizeMode="regular" id="68z-yG-NK9">
                             <allowedToolbarItems>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="E3j-s7-YSN"/>
-                                <toolbarItem implicitItemIdentifier="9B6E1B7B-46C1-4A04-8261-CC4B8D0797D5" label="Search" paletteLabel="search" id="E4m-O4-5AS" userLabel="Search">
+                                <toolbarItem implicitItemIdentifier="9B6E1B7B-46C1-4A04-8261-CC4B8D0797D5" label="" paletteLabel="search" id="E4m-O4-5AS" userLabel="Search">
                                     <nil key="toolTip"/>
                                     <size key="minSize" width="96" height="22"/>
                                     <size key="maxSize" width="160" height="22"/>
@@ -264,10 +262,10 @@
                 <windowController showSeguePresentationStyle="single" id="Khp-Dz-1ar" sceneMemberID="viewController">
                     <window key="window" identifier="LoginWindow" title="Login" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Ca9-eg-IT2">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
-                        <rect key="contentRect" x="163" y="189" width="330" height="257"/>
+                        <rect key="contentRect" x="163" y="189" width="400" height="300"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
-                        <value key="minSize" type="size" width="330" height="257"/>
-                        <value key="maxSize" type="size" width="330" height="257"/>
+                        <value key="minSize" type="size" width="400" height="300"/>
+                        <value key="maxSize" type="size" width="400" height="300"/>
                     </window>
                     <connections>
                         <segue destination="Y6S-2i-8Mf" kind="relationship" relationship="window.shadowedContentViewController" id="Ki9-Cw-8ZG"/>
@@ -275,7 +273,7 @@
                 </windowController>
                 <customObject id="nMY-0l-CnY" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-341" y="-484.5"/>
+            <point key="canvasLocation" x="-422" y="-479"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="41J-6m-03f">
@@ -423,6 +421,7 @@ Gw
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="T0k-S4-fWl" id="kzq-RG-hFQ"/>
                         <outlet property="column1" destination="bm7-I4-xIh" id="tVR-Pl-uye"/>
                         <outlet property="column2" destination="FGd-rx-WLK" id="ULp-rw-lMj"/>
                         <outlet property="column3" destination="kQh-YY-25I" id="jSo-51-ybp"/>
@@ -433,6 +432,7 @@ Gw
                         <outlet property="label3" destination="RV8-ce-ipq" id="d6O-V4-RhP"/>
                         <outlet property="label4" destination="828-Pw-qhK" id="ImJ-eh-t2H"/>
                         <outlet property="label5" destination="qUg-n0-JGz" id="Akw-sX-HF3"/>
+                        <outlet property="okButton" destination="7Dy-OC-9kh" id="Amc-Dq-hSo"/>
                     </connections>
                 </viewController>
                 <customObject id="51L-OF-l5p" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -585,17 +585,17 @@ Gw
                         <outlet property="passwordTextField" destination="skG-w8-ygx" id="gaT-nv-PWR"/>
                         <outlet property="progressIndicator" destination="SXi-BI-TCO" id="dhM-Fj-bRG"/>
                         <outlet property="rememberButton" destination="aNQ-cH-Vd9" id="PdP-dY-gQl"/>
-                        <segue destination="B8D-0N-5wS" kind="show" identifier="toMainView" id="to9-9e-3Dt"/>
+                        <segue destination="B8D-0N-5wS" kind="modal" identifier="toMainView" id="to9-9e-3Dt"/>
                     </connections>
                 </viewController>
                 <customObject id="qJZ-Y1-TMb" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="102" y="-484.5"/>
+            <point key="canvasLocation" x="102" y="-558"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController storyboardIdentifier="MainVC" id="XfG-lQ-9wD" customClass="MainViewController" customModule="_blankspace" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainVC" showSeguePresentationStyle="single" id="XfG-lQ-9wD" customClass="MainViewController" customModule="_blankspace" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="qVg-OE-YeX">
                         <rect key="frame" x="0.0" y="0.0" width="981" height="553"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
@@ -874,6 +874,7 @@ Gw
                                         </buttonCell>
                                         <connections>
                                             <action selector="addAction:" target="XfG-lQ-9wD" id="4ho-Ir-2Ha"/>
+                                            <segue destination="xxc-fe-9Jv" kind="modal" identifier="toAddView" id="w70-Uc-bod"/>
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="xWW-ot-qfG">
@@ -888,6 +889,7 @@ Gw
                                         </buttonCell>
                                         <connections>
                                             <action selector="editAction:" target="XfG-lQ-9wD" id="yyh-A2-ovn"/>
+                                            <segue destination="xxc-fe-9Jv" kind="modal" identifier="toEditView" id="W0M-aN-POe"/>
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="zPG-NY-ulB">
@@ -962,7 +964,7 @@ Gw
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="102.5" y="810.5"/>
+            <point key="canvasLocation" x="103" y="963"/>
         </scene>
     </scenes>
     <resources>
@@ -971,4 +973,7 @@ Gw
         <image name="NSStopProgressTemplate" width="11" height="11"/>
         <image name="NSUser" width="32" height="32"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="w70-Uc-bod"/>
+    </inferredMetricsTieBreakers>
 </document>
